# image_processing

./: CMakeLists.txt  package.xml
launch/: observe_marker_camera2.launch  robot1_center_aruco.launch  robot1_observe_aruco.launch  robot1_observe_marker.launch  robot1_stereo_aruco.launch  robot2_center_aruco.launch  robot2_observe_aruco.launch  robot2_observe_marker.launch  robot2_stereo_aruco.launch
src/: color_vel.py  coordinate_marker_camera1.cpp  coordinate_marker_camera2.cpp  coordinate_marker_center_camera1.cpp  coordinate_marker_center_camera2.cpp  coordinate_marker_stereo_camera1.cpp  coordinate_marker_stereo_camera2.cpp  coordinate_red_marker.cpp  detect_aruco.py  detect_aruco_center.py  detect_aruco_stereo.py  detect_marker.py  detect_marker_camera2.py  detect_red_marker.py  red_depth.cpp  red_detection.py
src/old/: coordinate_red_marker.cpp  depth_red_marker.cpp  detect_red_marker.py
